clean(code): overall

--- a/templates-email/contact-mess.html
+++ b/templates-email/contact-mess.html
@@ -96,7 +96,6 @@
       <br />
       Best regards,
       <br />
-      <strong>FastTickets</strong>
       <br />
       Fast Tickets
     </p>
@@ -117,7 +116,7 @@
       </span>
     </div>
     <div class="email-info">
-      <a href="/">FastTickets</a> | [Address] | [Zip Code/Pin Code], [Country Name]
+      <a href="/">FastTickets</a> | 11 Đ. Xô Viết Nghệ TĩnhPhường 25, Bình Thạnh, Hồ Chí Minh | Fast Tickets
     </div>
     <div class="email-info">
       &copy; 2025 FastTickets. All rights reserved.
